--- a/contact.html
+++ b/contact.html
@@ -85,19 +85,46 @@
       Contact Section
     ============================-->
     <section id="contact" class="wow fadeInUp">
-      <div class="container">
-        <div class="section-header">
-          <h2>Contact Us</h2>
-          <p>Sed tamen tempor magna labore dolore dolor sint tempor duis magna elit veniam aliqua esse amet veniam enim export quid quid veniam aliqua eram noster malis nulla duis fugiat culpa esse aute nulla ipsum velit export irure minim illum fore</p>
-        </div>
-
-        <div class="row contact-info">
+    
+        <div class="row contact-info" style="background-color:grey">
 
           <div class="col-md-4">
             <div class="contact-address">
               <i class="ion-ios-location-outline"></i>
-              <h3>Address</h3>
-              <address>A108 Adam Street, NY 535022, USA</address>
+              <h3 style="color: white">Head Office</h3>
+              <address> 5 Winnisimmet St, Chelsea, MA 02150, USA</address>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="contact-phone">
+              <i class="ion-ios-telephone-outline"></i>
+              <h3 style="color: white">Phone Number</h3>
+              <p><a href="tel:+13232488090">+1 (323) 248 8090</a></p>
+              <p><a href="tel:+16178848586‬">‭+1 (617) 884 8586‬ </a></p>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="contact-email">
+              <i class="ion-ios-email-outline"></i>
+              <h3 style="color: white">Email</h3>
+              <p><a href="mailto:eclipsevintageshipbuildg@gmail.com">eclipsevintageshipbuildg@gmail.com</a></p>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+
+      <div class="row contact-info" class="disapper">
+
+          <div class="col-md-4">
+            <div class="contact-address">
+              <i class="ion-ios-location-outline"></i>
+              <h3>Illinois Office</h3>
+              <address> 7255 W Kiowa  Ln Lernont, IL 60463</address>
             </div>
           </div>
 
@@ -105,7 +132,7 @@
             <div class="contact-phone">
               <i class="ion-ios-telephone-outline"></i>
               <h3>Phone Number</h3>
-              <p><a href="tel:+155895548855">+1 5589 55488 55</a></p>
+              <p><a href="tel:+13232488090">‭+1 323 248 8090 </a></p>
             </div>
           </div>
 
@@ -113,17 +140,51 @@
             <div class="contact-email">
               <i class="ion-ios-email-outline"></i>
               <h3>Email</h3>
-              <p><a href="mailto:nonnygraphics@gmail.com">info@example.com</a></p>
+              <p><a href="mailto:eclipsevintageshipbuildg@gmail.com">eclipsevintageshipbuildg@gmail.com</a></p>
             </div>
           </div>
 
         </div>
+
+      </div>
+
+      <div class="row contact-info" class="disapper">
+
+          <div class="col-md-4">
+            <div class="contact-address">
+              <i class="ion-ios-location-outline"></i>
+              <h3>Canada Office</h3>
+              <address> 30 Dundee Ave, Mount Pearl, NL AIN 4R7, Canada</address>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="contact-phone">
+              <i class="ion-ios-telephone-outline"></i>
+              <h3>Phone Number</h3>
+              <p><a href="tel:+1709747911">+1 709 747 911</a></p>
+            </div>
+          </div>
+
+          <div class="col-md-4">
+            <div class="contact-email">
+              <i class="ion-ios-email-outline"></i>
+              <h3>Email</h3>
+              <p><a href="mailto:eclipsevintageshipbuildg@gmail.com">eclipsevintageshipbuildg@gmail.com</a></p>
+            </div>
+          </div>
+
+        </div>
+
       </div>
 
         <center>
+
       <div class="container mb-4">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15765.053513986551!2d7.066534123980266!3d8.947860647796906!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x104e87e703eeddf7%3A0x98ff51427477b0a9!2sUniversity%20of%20Abuja%2C%20Mini%20Campus!5e0!3m2!1sen!2sng!4v1567801909671!5m2!1sen!2sng" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
         </div>
+
+
     </center>
 
       <div class="container">
