--- a/team.html
+++ b/team.html
@@ -97,8 +97,11 @@
             <div class="member">
               <div class="pic"><img src="img/team-11.jpeg" alt=""></div>
               <div class="details">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
+                <h4>Kelvin Morgan</h4>
+                <span>Manager, Commercial and Technical Officer</span>
+                <p class="add">Holds a degree in Electro-technical Engineering – Energy and Power Systems – obtained at the Massachusetts Maritime Academy in (1978).
+Has started his professional career at the São Jacinto Shipyards in the Electricity Department, project area, going to Mague and then the Fitzelgerald shipyards, Then went back to get a masters degree in Mechanical Engineering at the  Warsash Maritime Academy, Southampton England. founded EclipseVintage Shipyards with South Carolina as it’s first and only yard , first as Director. In 2005, takes the position of General Manager as branches were opened in Long Islands, New York  USA, Dublin Ireland And São Paulo, Brazil.
+</p>
                 <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
                   <a href=""><i class="fa fa-facebook"></i></a>
@@ -113,8 +116,17 @@
             <div class="member">
               <div class="pic"><img src="img/team-22.jpeg" alt=""></div>
               <div class="details">
-                <h4>Sarah Jhinson</h4>
-                <span>Product Manager</span>
+                <h4>John Herbert’s</h4>
+                <span>Director of Marketing and Sales</span>
+                <p style="font-weight: bold; letter-spacing: 2px; font-size: 10px;">"Don’t limit your challenges. Challenge your limits."</p><p class="add" style="font-size: 11px"> John Herbert’s proved his motto and challenged his limits when recently accepted a new position as Shipyard’s Director of Marketing and Sales.
+
+Graduated from the United States Marine Academy, Faculty of Engineering  after gaining experience as Maintenance Manager and Site Manager in the country and abroad, he came to  Eclipse  Vintage in 2010. was quickly promoted from Assistant Ship Repair Manager to Senior Project Engineer and in just a couple of years he was appointed Manager of Ship Repair Sales Department. He got first-hand knowledge of all the technical and commercial aspects of sales activities, from cost estimates and quotations, risk assessment, contract negotiation, project development, procurement to financial and profitability analysis.
+
+In ever changing and highly competitive business environment, Herbert’s has the forethought and steadiness to build relationships of a long-lasting nature.
+Herbert’s successfully completed several contract and project management courses at Fisher Maritime and IBM and holds an EMBA from the the IEDC Business School.
+
+He believes the keys to success are an open mind, hard work, loyalty and Honesty.
+</p>
                 <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
                   <a href=""><i class="fa fa-facebook"></i></a>
@@ -129,8 +141,9 @@
             <div class="member">
               <div class="pic"><img src="img/team-33.jpeg" alt=""></div>
               <div class="details">
-                <h4>William Anderson</h4>
-                <span>CTO</span>
+                <h4>Jonas Kelvin Morgan</h4>
+                <span>Chief Engineer</span>
+                <p class="add">The perfect description of him is “Hard-work”  A graduate  of Marine Mechanical Engineering from the Warsash Maritime Academy, Southampton England, he is an important member of our team having bought 65% OF The Company’s share with his father who happens to be our founding father.  He started his career at Stena drilling, Manchester UK where he worked as On board Engineer to the Stena B3  Cargo vessel sailing across Europe and America. He joined EclipseVintage Ship Building in 2009 as Chief Engineer.</p>
                 <div class="social">
                   <a href=""><i class="fa fa-twitter"></i></a>
                   <a href=""><i class="fa fa-facebook"></i></a>
